# stori-rag-challenge-

./: .env-example  .env.docker  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: d35dc5f9a3b0_sessionoverview.py
app/: main.py
app/constants/: openai_models.py
app/core/agents/: base_agent.py  retrieval_agent.py  session_analysis_agent.py
app/db/: db.py
app/docs/: chat.html  questions_dataset.json
app/models/: __init__.py  session_overview.py
app/routers/: __init__.py  chat_html_router.py  swagger_router.py
app/routers/v1/: __init__.py  chat_history_router.py  index_router.py  retrieval_router.py  root_router.py  session_overview_router.py  vector_router.py
app/schemas/: session_overview.py
app/services/: __init__.py  chat_history_service.py  index_service.py  pdf_loader_service.py  rerank_service.py  retrieval_service.py  session_overview_service.py  vector_service.py
app/utils/: db_utils.py  logger.py
